tldraw/apps/tldraw-logseq/src/styles.css
/* TODO: move to useStylesheet */
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap');

.logseq-tldraw {
  --color-panel: var(--ls-tertiary-background-color);
  --color-panel-inverted: var(--ls-secondary-text-color);
  --color-text: var(--ls-primary-text-color);
  --color-text-inverted: var(--ls-tertiary-background-color);
  --color-hover: var(--ls-secondary-background-color);
  --color-selectedStroke: rgb(42, 123, 253);
  --color-selectedFill: rgba(66, 133, 244);
  --color-selectedContrast: #fff;
  --shadow-small: 0 1px 2px 0 rgb(0 0 0 / 0.05);
  --shadow-medium: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
  --shadow-large: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
}

.logseq-tldraw-wrapper {
  width: 100%;
  height: 100%;
  position: relative;
  display: flex;
  flex-direction: column;
}

.logseq-tldraw .contextbar label {
  font-family: var(--ls-font-family);
  font-size: 10px;
}

.logseq-tldraw button {
  font-size: 13px;
  font-family: var(--ls-font-family);
  background: none;
  border: none;
  cursor: pointer;
  border-radius: 2px;
  padding: 4px 8px;
  opacity: 1;
}

.logseq-tldraw .toolbar {
  position: absolute;
  top: 0;
  width: 100%;
  grid-row: 1;
  display: flex;
  align-items: center;
  padding: 8px;
  color: black;
  z-index: 100000;
  user-select: none;
  background: white;
  border-bottom: 1px solid black;
  font-size: inherit;
}

.logseq-tldraw .contextbar {
  pointer-events: all;
  position: relative;
  background-color: #fff;
  color: #a4b5b6;
  padding: 8px 12px;
  border-radius: 8px;
  white-space: nowrap;
  display: flex;
  gap: 12px;
  align-items: stretch;
  font-size: 14px;
  will-change: transform, contents;
  box-shadow: var(--shadow-medium);
  z-index: 1000;
}

.logseq-tldraw .statusbar {
  position: absolute;
  font-family: monospace;
  font-size: 10px;
  bottom: 0;
  grid-row: 3;
  width: 100%;
  display: flex;
  align-items: center;
  padding: 8px;
  color: black;
  z-index: 100000;
  user-select: none;
  background: white;
  border-top: 1px solid black;
  flex-shrink: 0;
  height: 32px;
}

.logseq-tldraw .input {
  display: flex;
  flex-direction: column;
  gap: 4px;
}

.logseq-tldraw .number-input {
  width: 44px;
  height: 24px;
  padding: 2px;
}

.logseq-tldraw .color-input-wrapper {
  overflow: hidden;
  height: 18px;
  width: 46px;
  border-radius: 2px;
  margin: 2px;
  box-shadow: 0 0 0 2px var(--ls-tertiary-background-color);
}

.logseq-tldraw .color-input {
  transform: translate(-4px, -4px) scale(1.5);
}

.logseq-tldraw .switch-input-root {
  all: unset;
  width: 36px;
  height: 20px;
  background-color: rgba(0, 0, 0, 0.44);
  position: relative;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  border-radius: 9999px;
}

.logseq-tldraw .switch-input-root[data-state='checked'] {
  background: var(--ls-selection-background-color);
}

.logseq-tldraw .switch-input-thumb {
  display: block;
  width: 16px;
  height: 16px;
  background-color: white;
  border-radius: 9999px;
  transition: transform 100ms ease 0s;
  transform: translateX(3px);
  will-change: transform;
}

.logseq-tldraw .switch-input-thumb[data-state='checked'] {
  transform: translateX(17px);
}

.logseq-tldraw .text-input {
  height: 24px;
  padding: 0;
  background: none;
  border-radius: 2px;
}

.logseq-tldraw .text-input:focus {
  outline: none;
}

.logseq-tldraw .primary-tools {
  display: flex;
  position: absolute;
  right: 24px;
  top: 0;
  height: 100%;
  width: 64px;
  align-items: center;
  justify-content: center;
  pointer-events: none;
  gap: 8px;
  z-index: 10000;
}

.logseq-tldraw .panel {
  background-color: var(--color-panel);
  box-shadow: var(--shadow-medium);
  pointer-events: all;
}

.floating-button {
  background-color: var(--color-panel);
  height: 32px;
  width: 32px;
  border-radius: 4px;
  box-shadow: var(--shadow-medium);
  overflow: hidden;
}

.logseq-tldraw .primary-tools .floating-panel {
  display: flex;
  flex-flow: column;
  border-radius: 8px;
  overflow: hidden;
  padding: 8px;
  gap: 8px;
}

.logseq-tldraw .floating-panel > button {
  border-radius: 4px;
}

.logseq-tldraw .primary-tools .button {
  position: relative;
  height: 36px;
  width: 36px;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 13px;
  font-family: var(--ls-font-family);
  background: none;
  border: none;
  cursor: pointer;
  color: var(--ls-secondary-text-color);
}

.logseq-tldraw .primary-tools .button:hover {
  background-color: var(--color-hover);
}

.logseq-tldraw .primary-tools .button[data-selected='true'] {
  background-color: var(--color-selectedFill);
  color: var(--color-selectedContrast);
}

.logseq-tldraw .floating-panel[data-tool-locked='true'] > .button[data-selected='true']::after {
  content: '';
  display: block;
  height: 6px;
  width: 6px;
  border: 2px solid var(--color-selectedContrast);
  background-color: var(--color-selectedFill);
  position: absolute;
  bottom: -4px;
  left: calc(50% - 5px);
  border-radius: 100%;
}

.logseq-tldraw .text-shape-wrapper {
  position: absolute;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  border: 1px solid transparent;
  margin: 0;
  padding: 0;
  z-index: 9999;
  user-select: none;
  width: 100%;
  height: 100%;
  min-height: 1;
  min-width: 1;
  line-height: 1;
  outline: 0;
  backface-visibility: hidden;
  pointer-events: all;
  vertical-align: baseline;
  -webkit-user-drag: none;
  -webkit-user-select: none;
  -webkit-touch-callout: none;
}

.logseq-tldraw .text-shape-content {
  z-index: 1;
  width: fit-content;
  height: fit-content;
  border: none;
  resize: none;
  margin: 0;
  padding: inherit;
  font-family: inherit;
  font-size: inherit;
  font-variant: inherit;
  text-align: inherit;
  min-height: inherit;
  min-width: inherit;
  line-height: inherit;
  letter-spacing: inherit;
  outline: 0;
  white-space: inherit;
  overflow-wrap: inherit;
  font-weight: inherit;
  overflow: hidden;
  backface-visibility: hidden;
  display: inline-block;
  user-select: none;
  -webkit-user-select: none;
}

.logseq-tldraw .text-shape-content[data-isediting='true'] {
  visibility: hidden;
  pointer-events: none;
}

.logseq-tldraw .text-shape-input {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  width: 100%;
  height: 100%;
  border: none;
  resize: none;
  padding: inherit;
  font-family: inherit;
  font-size: inherit;
  font-variant: inherit;
  text-align: inherit;
  min-height: inherit;
  min-width: inherit;
  line-height: inherit;
  letter-spacing: inherit;
  outline: 0;
  white-space: inherit;
  overflow-wrap: inherit;
  font-weight: inherit;
  overflow: hidden;
  backface-visibility: hidden;
  display: inline-block;
  pointer-events: all;
  user-select: text;
  -webkit-user-select: text;
}

.logseq-tldraw .tl-stroke-hitarea {
  fill: none;
  stroke: transparent;
  stroke-width: calc(24px * var(--tl-scale));
  pointer-events: stroke;
  stroke-linecap: round;
  stroke-linejoin: round;
}

.logseq-tldraw .text-label-wrapper {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  pointer-events: none;
  user-select: none;
}

.logseq-tldraw .text-label-inner-wrapper {
  position: absolute;
  padding: 4px;
  z-index: 1;
  min-height: 1px;
  min-width: 1px;
  line-height: 1;
  outline: 0;
  font-weight: 500;
  text-align: center;
  backface-visibility: hidden;
  user-select: none;
  white-space: pre-wrap;
  overflow-wrap: break-word;
}

.logseq-tldraw .text-label-textarea {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  width: 100%;
  height: 100%;
  border: none;
  padding: 4px;
  resize: none;
  text-align: inherit;
  min-height: inherit;
  min-width: inherit;
  line-height: inherit;
  letter-spacing: inherit;
  outline: 0;
  font-weight: inherit;
  overflow: hidden;
  backface-visibility: hidden;
  display: inline-block;
  pointer-events: all;
  background: var(--colors-boundsBg);
  user-select: text;
  -webkit-font-smoothing: subpixel-antialiased;
  white-space: pre-wrap;
  overflow-wrap: break-word;
}

.logseq-tldraw .text-label-textarea:focus {
  outline: none;
  border: none;
}

.logseq-tldraw .preview-minimap {
  height: 300px;
  width: 400px;
  top: 16px;
  left: 16px;
  position: absolute;
  border: 1px solid black;
  background-color: #fff;
  pointer-events: all;
}

.logseq-tldraw .preview-minimap-toggle {
  position: absolute;
  top: 24px;
  right: 40px;
  z-index: 1;
  width: 32px;
  height: 32px;
  border-radius: 4px;
  box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
  background: white;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 14px;
}

.logseq-tldraw .preview-minimap-toggle[data-active='true'] {
  background: #eee;
}

.logseq-tldraw .tl-quick-search {
  width: fit-content;
  position: relative;
}

.logseq-tldraw .tl-quick-search-icon {
  flex-shrink: 0;
  margin-right: 12px;
}

.logseq-tldraw .tl-quick-search-input-container {
  display: flex;
  align-items: center;
  font-size: 16px;
  background-color: var(--ls-secondary-background-color);
  padding: 4px 12px;
  border-radius: 8px;
  box-shadow: var(--shadow-small);
}

.logseq-tldraw .tl-quick-search-input-sizer {
  display: inline-grid;
  vertical-align: top;
  align-items: center;
  position: relative;
  margin: 5px;
}

.logseq-tldraw .tl-quick-search-input {
  grid-area: 1/2;
  width: auto;
  line-height: 1;
}

.logseq-tldraw .tl-quick-search-input-sizer::after {
  content: attr(data-value) ' ';
  visibility: hidden;
  white-space: pre-wrap;
  grid-area: 1/2;
  width: auto;
}

.logseq-tldraw .tl-quick-search-options {
  position: absolute;
  top: calc(100% + 8px);
  left: 0;
  background-color: var(--ls-primary-background-color);
  max-height: 300px;
  min-width: 320px;
  box-shadow: var(--shadow-large);
  width: 100%;
  overflow-y: auto;
  display: flex;
  flex-direction: column;
  border-radius: 8px;
  overscroll-behavior: none;
}

.logseq-tldraw .tl-quick-search-option {
  padding: 8px 16px;
  cursor: pointer;
  display: flex;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.logseq-tldraw .tl-quick-search-option:hover {
  background-color: var(--ls-menu-hover-color, #f4f5f7);
}

.logseq-tldraw .tl-logseq-portal-container {
  width: 100%;
  overflow: auto;
  border-radius: 8px;
  overscroll-behavior: none;
  height: 100%;
  display: flex;
  flex-direction: column;
  background: var(--ls-secondary-background-color);
  opacity: 1;
}

.logseq-tldraw .tl-logseq-portal-header {
  height: 40px;
  width: 100%;
  flex-shrink: 0;
  background: transparent;
  display: flex;
  color: var(--ls-title-text-color);
  padding: 0 1rem;
  align-items: center;
}

html[data-theme='light'] .logseq-tldraw .tl-logseq-portal-header {
  backdrop-filter: brightness(0.9);
}

html[data-theme='dark'] .logseq-tldraw .tl-logseq-portal-header {
  backdrop-filter: brightness(1.2);
}

